//TODO : Show restaurants comments Show user profile Show distance between user and every restaurants Restaurant search

--- a/app/src/main/res/values/strings_activity_login.xml
+++ b/app/src/main/res/values/strings_activity_login.xml
@@ -6,8 +6,6 @@
     <string name="action_go_register">Not registered? <a href='#'>Click here</a></string>
 
     <string name="content_invalid_login_settings">Invalid login settings</string>
-
-    <string name="content_description">Favicon</string>
-
+    <string name="content_valid_login_settings">Login successful</string>
 
 </resources>
