--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/logoView"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/ic_launcher"
-                android:contentDescription="@string/content_description"
+                android:contentDescription="@string/app_name"
                 android:layout_weight="2.5"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:layout_marginBottom="@dimen/activity_vertical_margin" />
