--- a/app/src/main/res/menu/menu_details.xml
+++ b/app/src/main/res/menu/menu_details.xml
@@ -3,19 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="fr.utt.if26.resto.MainActivity">
 
-    <item android:id="@+id/action_menu_search"
-        android:actionViewClass="android.widget.SearchView"
-        android:icon="@drawable/ic_action_search"
-        android:title="@string/action_search"
-        app:showAsAction="ifRoom|collapseActionView"/>
-
     <item
         android:id="@+id/a_More"
         android:icon="@drawable/ic_action_overflow"
         android:title="@string/content_readmore"
-        app:showAsAction="always">
+        app:showAsAction="ifRoom">
         <menu>
-
             <item
                 android:id="@+id/action_menu_login_register"
                 android:orderInCategory="100"
@@ -31,11 +24,6 @@
                 android:orderInCategory="100"
                 android:title="@string/action_menu_about"
                 app:showAsAction="never" />
-            <!--<item
-                android:id="@+id/action_settings"
-                android:title="@string/action_settings"
-                android:orderInCategory="100"
-                app:showAsAction="never" />-->
 
         </menu>
     </item>
