--- a/app/src/main/res/menu/menu_main_connected.xml
+++ b/app/src/main/res/menu/menu_main_connected.xml
@@ -17,9 +17,9 @@
         <menu>
 
             <item
-                android:id="@+id/action_menu_login_register"
+                android:id="@+id/action_menu_profile"
                 android:orderInCategory="100"
-                android:title="@string/action_menu_login_register"
+                android:title="@string/action_menu_profile"
                 app:showAsAction="never" />
             <item
                 android:id="@+id/action_menu_help"
@@ -31,12 +31,6 @@
                 android:orderInCategory="100"
                 android:title="@string/action_menu_about"
                 app:showAsAction="never" />
-            <!--<item
-                android:id="@+id/action_settings"
-                android:title="@string/action_settings"
-                android:orderInCategory="100"
-                app:showAsAction="never" />-->
-
         </menu>
     </item>
 </menu>
