--- a/app/src/main/res/values/strings_activity_main.xml
+++ b/app/src/main/res/values/strings_activity_main.xml
@@ -4,6 +4,8 @@
     <string name="hello_world">Hello world!</string>
 
     <string name="action_menu_login_register">Login/Register</string>
+    <string name="action_menu_profile">Profile</string>
+    <string name="action_menu_more">More</string>
     <string name="action_menu_help">Help</string>
     <string name="action_menu_about">About</string>
     <string name="action_settings">Settings</string>
@@ -13,5 +15,20 @@
     <string name="action_help">Help</string>
     <string name="action_check_updates">Check updates</string>
     <string name="action_search">Search</string>
+
+    <string name="title_restaurant_near_user">Nearby restaurant</string>
+
+    <string name="content_resto_description">
+        Bougnat des Pouilles\n
+        29 rue Paillot de Montabert\n
+        10000 - Troyes\n
+        Telephone : 03 25 73 59 85\n
+        Website : http://www.bougnatdespouilles.com
+    </string>
+    <string name="content_resto_picture">Restaurant picture</string>
+    <string name="content_resto_rate">Restaurant rate</string>
+
+    <string name="item_content_telephone">Telephone</string>
+    <string name="item_content_website">Website</string>
 
 </resources>
