--- a/app/src/main/res/layout/activity_details_resto.xml
+++ b/app/src/main/res/layout/activity_details_resto.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scroll"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/activity_little_padding"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:layout_margin="@dimen/activity_little_padding"
     tools:context=".DetailsResto">
 
     <LinearLayout
@@ -16,41 +15,67 @@
         android:layout_margin="0dp"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="0dp"
-        >
+        android:padding="0dp">
 
-        <ImageView
-            android:id="@+id/image_resto"
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="175dp"
-            android:contentDescription="@string/hello_world"
-            android:padding="0dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/restaurant_1" />
+            android:layout_weight="1"
+            android:layout_height="0dp">
+
+            <ImageView
+                android:id="@+id/image_resto"
+                android:layout_width="match_parent"
+                android:layout_height="175dp"
+                android:contentDescription="@string/hello_world"
+                android:padding="0dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/restaurant_1" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/image_add_picture"
+                android:layout_gravity="start|top"
+                android:contentDescription="@string/hello_world"
+                android:background="@drawable/ic_action_camera" />
+
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_little_padding"
             android:layout_marginBottom="@dimen/activity_little_padding"
+            android:layout_marginTop="@dimen/activity_little_padding"
             android:orientation="horizontal"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin">
 
             <TextView
                 android:id="@+id/resto_content_rate"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.1"
                 android:paddingTop="4dp"
                 android:text="@string/content_rating"
                 android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/resto_content_rate_count"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.2"
+                android:gravity="start"
+                android:paddingLeft="@dimen/activity_little_padding"
+                android:paddingRight="@dimen/activity_little_padding"
+                android:paddingTop="@dimen/activity_little_padding"
+                android:text="@string/content_rating_count"
+                android:textSize="14sp" />
 
             <ImageView
                 android:id="@+id/resto_image_rate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.2"
+                android:layout_weight="0.4"
                 android:contentDescription="@string/hello_world"
                 android:scaleType="fitCenter"
                 android:src="@drawable/star_rating_five" />
@@ -65,19 +90,20 @@
             android:columnCount="3">
 
             <LinearLayout
+                android:id="@+id/resto_action_call"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/resto_action_call"
+                    android:id="@+id/resto_image_call"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
+                    android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/activity_horizontal_margin"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:adjustViewBounds="true"
-                    android:layout_gravity="center"
                     android:background="@drawable/ic_action_call"
                     android:contentDescription="@string/hello_world"
                     android:scaleType="fitXY" />
@@ -89,24 +115,25 @@
                     android:layout_gravity="center"
                     android:padding="@dimen/activity_little_padding"
                     android:paddingTop="0dp"
-                    android:textStyle="bold"
-                    android:text="@string/content_item_call" />
+                    android:text="@string/content_item_call"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/resto_action_direction"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/resto_action_direction"
+                    android:id="@+id/resto_image_direction"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
+                    android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/activity_horizontal_margin"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:adjustViewBounds="true"
-                    android:layout_gravity="center"
                     android:background="@drawable/ic_action_directions"
                     android:contentDescription="@string/hello_world"
                     android:scaleType="centerInside" />
@@ -117,24 +144,25 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:padding="@dimen/activity_little_padding"
-                    android:textStyle="bold"
-                    android:text="@string/content_item_directions" />
+                    android:text="@string/content_item_directions"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/resto_action_website"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/resto_action_website"
+                    android:id="@+id/resto_image_website"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
+                    android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/activity_horizontal_margin"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:adjustViewBounds="true"
-                    android:layout_gravity="center"
                     android:background="@drawable/ic_action_web_site"
                     android:contentDescription="@string/hello_world"
                     android:scaleType="fitXY" />
@@ -145,8 +173,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:padding="@dimen/activity_little_padding"
-                    android:textStyle="bold"
-                    android:text="@string/content_item_website" />
+                    android:text="@string/content_item_website"
+                    android:textStyle="bold" />
             </LinearLayout>
         </GridLayout>
 
@@ -154,13 +182,13 @@
             android:id="@+id/resto_content_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingEnd="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_little_padding"
-            android:paddingBottom="@dimen/activity_horizontal_margin"
-            android:textSize="14sp"
-            android:text="@string/content_resto_description_default" />
+            android:text="@string/content_resto_description_default"
+            android:textSize="14sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -202,111 +230,69 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="@dimen/activity_little_padding"
             android:layout_marginBottom="@dimen/activity_little_padding"
-            android:paddingStart="@dimen/activity_little_padding"
-            android:paddingLeft="@dimen/activity_little_padding"
-            android:paddingEnd="@dimen/activity_little_padding"
-            android:paddingRight="@dimen/activity_little_padding"
+            android:layout_marginTop="@dimen/activity_little_padding"
             android:background="@drawable/layout_border"
-            >
+            android:orientation="vertical"
+            android:paddingEnd="@dimen/activity_little_padding"
+            android:paddingLeft="@dimen/activity_little_padding"
+            android:paddingRight="@dimen/activity_little_padding"
+            android:paddingStart="@dimen/activity_little_padding">
 
             <LinearLayout
                 android:id="@+id/layout_write_comment"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:orientation="horizontal"
                 android:layout_marginTop="@dimen/activity_little_padding"
+                android:orientation="horizontal"
+                android:focusable="true" android:focusableInTouchMode="true"
                 android:weightSum="1">
 
                 <EditText
                     android:id="@+id/resto_input_comment"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:inputType="text|textMultiLine"
-                    android:background="@drawable/text_edit_rectangle"
-                    android:textCursorDrawable="@null"
-                    android:padding="10dp"
                     android:layout_gravity="start"
+                    android:layout_weight="0.95"
                     android:height="70dp"
-                    android:nextFocusUp="@id/resto_input_comment"
+                    android:background="@drawable/text_edit_rectangle"
+                    android:inputType="text|textMultiLine"
                     android:nextFocusLeft="@id/resto_input_comment"
-                    android:layout_weight="1.00" />
+                    android:nextFocusUp="@id/resto_input_comment"
+                    android:padding="10dp"
+                    android:textCursorDrawable="@null"
+                    android:singleLine="false"
+                    android:maxLines="5"/>
 
                 <ImageButton
                     android:id="@+id/resto_action_comment"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:scaleType="fitCenter"
+                    android:layout_weight="0.05"
                     android:background="@drawable/ic_action_send_now"
-                    android:height="70dp"
-                    android:width="70dp"
-                    android:contentDescription="@string/hello_world"/>
+                    android:contentDescription="@string/hello_world"
+                    android:scaleType="fitCenter" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="wrap_content"
+                android:minHeight="150dp"
                 android:orientation="horizontal"
-                >
-            <ImageView
-                android:id="@+id/comment_user_image"
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="top|center"
-                android:contentDescription="@string/hello_world"
-                android:maxWidth="50dp"
-                android:src="@drawable/user_default" />
+                android:layout_marginTop="@dimen/activity_little_padding"
+                android:layout_marginBottom="@dimen/activity_little_padding"
+                android:paddingStart="@dimen/activity_little_padding"
+                android:paddingLeft="@dimen/activity_little_padding"
+                android:paddingEnd="@dimen/activity_little_padding"
+                android:paddingRight="@dimen/activity_little_padding"
+                android:background="@drawable/layout_border">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="5dp">
-
-                <TextView
-                    android:id="@+id/comment_user_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/comment_user_name"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-
-                <LinearLayout
+                <ListView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_height="match_parent"
+                    android:id="@+id/list_comments"/>
 
-                    <ImageView
-                        android:id="@+id/resto_user_rate"
-                        android:layout_width="0dp"
-                        android:layout_height="20dp"
-                        android:layout_gravity="start"
-                        android:layout_weight="0.4"
-                        android:contentDescription="@string/hello_world"
-                        android:scaleType="centerInside"
-                        android:src="@drawable/star_rating_five" />
-
-                    <TextView
-                        android:id="@+id/comment_user_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginStart="@dimen/activity_horizontal_margin"
-                        android:layout_gravity="center"
-                        android:layout_weight="0.6"
-                        android:text="@string/comment_user_date" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/comment_user_comment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/comment_user_comment"/>
             </LinearLayout>
-                </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
