--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,5 +1,16 @@
 <resources>
-    <string name="google_maps_key_instructions" templateMergeStrategy="replace"></string>
+    <string name="google_maps_key_instructions" templateMergeStrategy="replace"><!--
 
-    <string name="google_maps_key" templateMergeStrategy="preserve"></string>
+    To get one, follow this link, follow the directions and press "Create" at the end:
+
+https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=CD:C6:AA:6B:9C:CA:E7:C8:7A:0A:3E:21:96:C4:AC:D4:84:88:01:9D%3Bfr.utt.if26.resto
+
+    You can also add your credentials to an existing key, using this line:
+    CD:C6:AA:6B:9C:CA:E7:C8:7A:0A:3E:21:96:C4:AC:D4:84:88:01:9D;fr.utt.if26.resto
+
+    Once you have your key (it starts with "AIza"), replace the "google_maps_key"
+    string in this file.
+    --></string>
+
+    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyCyksCzNr3mvbHuCDF3g-0DoFQhkD1iXMk</string>
 </resources>
