--- a/app/src/main/res/drawable/layout_border.xml
+++ b/app/src/main/res/drawable/layout_border.xml
@@ -7,5 +7,5 @@
         android:topRightRadius="0dp" />
     <stroke
         android:width="1dp"
-        android:color="@android:color/white" />
+        android:color="@android:color/holo_green_dark" />
 </shape>
