--- a/app/src/main/res/layout/activity_details_resto.xml
+++ b/app/src/main/res/layout/activity_details_resto.xml
@@ -38,7 +38,19 @@
                 android:id="@+id/image_add_picture"
                 android:layout_gravity="start|top"
                 android:contentDescription="@string/hello_world"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:background="@drawable/ic_action_camera" />
+
+            <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/resto_image_rate"
+                android:layout_gravity="end|bottom"
+                android:numStars="5"
+                android:stepSize="1"
+                android:rating="4"
+                android:isIndicator="true" />
 
         </FrameLayout>
 
@@ -48,8 +60,9 @@
             android:layout_marginBottom="@dimen/activity_little_padding"
             android:layout_marginTop="@dimen/activity_little_padding"
             android:orientation="horizontal"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin">
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin">
 
             <TextView
                 android:id="@+id/resto_content_rate"
@@ -57,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="4dp"
                 android:text="@string/content_rating"
-                android:textSize="30sp" />
+                android:textSize="28sp" />
 
             <TextView
                 android:id="@+id/resto_content_rate_count"
@@ -65,20 +78,26 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.2"
                 android:gravity="start"
-                android:paddingLeft="@dimen/activity_little_padding"
-                android:paddingRight="@dimen/activity_little_padding"
                 android:paddingTop="@dimen/activity_little_padding"
+                android:layout_marginStart="@dimen/activity_little_padding"
+                android:layout_marginLeft="@dimen/activity_little_padding"
                 android:text="@string/content_rating_count"
                 android:textSize="14sp" />
 
-            <ImageView
-                android:id="@+id/resto_image_rate"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.4"
-                android:contentDescription="@string/hello_world"
-                android:scaleType="fitCenter"
-                android:src="@drawable/star_rating_five" />
+            <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:id="@+id/resto_rate"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_gravity="end|top"
+                android:layout_marginTop="@dimen/activity_little_padding"
+                android:layout_marginEnd="@dimen/activity_little_padding"
+                android:layout_marginRight="@dimen/activity_little_padding"
+                android:numStars="5"
+                android:stepSize="1"
+                android:rating="4"
+                android:isIndicator="true" />
+
         </LinearLayout>
 
         <GridLayout
@@ -261,6 +280,7 @@
                     android:nextFocusUp="@id/resto_input_comment"
                     android:padding="10dp"
                     android:textCursorDrawable="@null"
+                    android:textColor="@color/black"
                     android:singleLine="false"
                     android:maxLines="5"/>
 
