--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -22,11 +22,11 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="150dp"
                 android:id="@+id/account_picture"
                 android:src="@drawable/user_default"
                 android:contentDescription="@string/hello_world"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="25dp"
                 android:layout_gravity="center_horizontal"/>
 
             <EditText
@@ -77,7 +77,6 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
-                android:background="@drawable/button_styled"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:text="@string/action_logout"
                 android:textStyle="bold" />
