--- a/app/src/main/res/layout/activity_details_resto.xml
+++ b/app/src/main/res/layout/activity_details_resto.xml
@@ -36,11 +36,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/image_add_picture"
+                android:layout_marginStart="@dimen/activity_little_padding"
+                android:layout_marginLeft="@dimen/activity_little_padding"
                 android:layout_gravity="start|top"
                 android:contentDescription="@string/hello_world"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:background="@drawable/ic_action_camera" />
+                android:background="@drawable/camera_red" />
 
             <RatingBar
                 android:layout_width="wrap_content"
@@ -108,7 +110,7 @@
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:adjustViewBounds="true"
-                    android:background="@drawable/ic_action_call"
+                    android:background="@drawable/img_telephone"
                     android:contentDescription="@string/hello_world"
                     android:scaleType="fitXY" />
 
@@ -138,7 +140,7 @@
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:adjustViewBounds="true"
-                    android:background="@drawable/ic_action_directions"
+                    android:background="@drawable/img_directions"
                     android:contentDescription="@string/hello_world"
                     android:scaleType="centerInside" />
 
@@ -167,7 +169,7 @@
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:adjustViewBounds="true"
-                    android:background="@drawable/ic_action_web_site"
+                    android:background="@drawable/img_internet_web"
                     android:contentDescription="@string/hello_world"
                     android:scaleType="fitXY" />
 
@@ -257,7 +259,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
-                    android:layout_weight="0.95"
+                    android:layout_weight="1.00"
                     android:height="70dp"
                     android:background="@drawable/text_edit_rectangle"
                     android:inputType="text|textMultiLine"
@@ -271,10 +273,9 @@
 
                 <ImageButton
                     android:id="@+id/resto_action_comment"
-                    android:layout_width="wrap_content"
+                    android:layout_width="50dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.05"
-                    android:background="@drawable/ic_action_send_now"
+                    android:background="@drawable/img_plane"
                     android:contentDescription="@string/hello_world"
                     android:scaleType="fitCenter" />
             </LinearLayout>
